# csvcat

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs  reader.rs  table.rs  viewer.rs
